--- a/src/app/order/order-items/order-items.component.html
+++ b/src/app/order/order-items/order-items.component.html
@@ -1,10 +1,10 @@
-<div class="col-xs-12" *ngIf="!items">
+<div class="col-xs-12" *ngIf="itens.length === 0">
   <p>
     Não há item no seu carrinho. Que tal começar por <a [routerLink]="['/restaurants']">aqui</a>? 
   </p>
 </div>
 
-<div class="col-xs-12 table-responsive" *ngIf="items">
+<div class="col-xs-12 table-responsive" *ngIf="itens.length > 0">
   <table class="table table-striped">
     <thead>
     <tr>
@@ -16,7 +16,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let item of items">
+    <tr *ngFor="let item of itens">
       <td class="text-center">
         <a (click)="emitIncreaseQty(item)" class="btn btn-sm"><i class="fa fa-minus"></i></a>
           {{item.quantity}}
@@ -27,7 +27,7 @@
       <td>{{item.menuItem.description}}</td>
       <td class="text-right">{{item.value() | currency: 'BRL': true}}</td>
       <td class="text-right">
-        <a (click="emitRemove(item)") class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
+        <a (click)="emitRemove(item)" class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
       </td>
     </tr>
     </tbody>
