--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -48,8 +48,12 @@
             <div class="col-xs-12">
               <p class="lead">Itens do Pedido:</p>
             </div>
-            
-            <mt-order-items></mt-order-items>
+
+            <mt-order-items [itens]="cartItems()"
+              (increaseQty)="increaseQty($event)"
+              (decreaseQty)="decreaseQty($event)"
+              (remove)="remove($event)">
+            </mt-order-items>
             
             <!-- /.col -->
           </div>
