--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -5,36 +5,59 @@
 <section class="content">
   <section class="invoice">
 
-        {{form.valid}}
-        {{form.value | json}}
-
-        <form #form="ngForm" novalidate>
+        <form [formGroup]="orderForm" novalidate>
           <div class="row">
             <div class="col-xs-12">
               <h2 class="page-header">
                 <i class="fa fa-shopping-cart"></i> Finalize o seu pedido
               </h2>
             </div>
-          </div>                
+          </div>
+          
+          <div class="row">
+            <div class="col-xs-12 col-sm-9">
+              <p class="lead">Seus dados:</p>
+            </div>
 
-          <div class="row invoice-info">
+            <div class="col-xs-12 col-sm-3">
+              <span class="help-block pull-right has-error-block" *ngIf="orderForm.hasError('emailsNotMatch')"><i class="fa fa-remove"></i>Os e-mails devem ser iguais</span>
+            </div>
+            
+            <div class="col-sm-6 col-xs-12">
+              <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Nome">
+                <input class="form-control" formControlName="name" placeholder="Nome" autocomplete="off">
+              </mt-input-container>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <mt-input-container errorMessage="E-mail inválido" label="E-mail">
+                <input type="text" formControlName="email" class="form-control" placeholder="E-mail" autocomplete="off">
+              </mt-input-container>
+            </div>
+            <div class="col-sm-3 col-xs-6">
+              <mt-input-container errorMessage="E-mail inválido" label="E-mail">
+                <input type="text" formControlName="emailConfirmation" class="form-control" placeholder="Confirmação e-mail"   autocomplete="off">
+              </mt-input-container>
+            </div>
+          </div>
+
+          <div class="row">
             <div class="col-xs-12">
               <p class="lead">Endereço de Entrega:</p>
             </div>
             <div class="col-sm-6 col-xs-12">
               <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Endereço">
-                <input name="address" class="form-control" ngModel required minlength="5" autocomplete="off">
+                <input formControlName="address" class="form-control" autocomplete="off">
               </mt-input-container>
             </div>
             <div class="col-sm-3 col-xs-6">
               <mt-input-container errorMessage="Obrigatório e somente números" label="Número">
-                <input type="text" name="number" class="form-control" pattern="^[0-9]*$" ngModel required  autocomplete="off">
+                <input type="text" formControlName="number" class="form-control" autocomplete="off">
               </mt-input-container>
             </div>
             <div class="col-sm-3 col-xs-6">
               <div class="form-group">
                 <mt-input-container>
-                    <input type="text" class="form-control" name="optional" ngModel placeholder="Complemento">
+                    <input type="text" class="form-control" formControlName="optionalAddress" placeholder="Complemento">
                 </mt-input-container>
               </div>
 
@@ -65,7 +88,7 @@
               <p class="lead">Formas de Pagamento:</p>
 
                 <div class="form-group">
-                  <mt-radio [options]="paymentOptions" name="paymentOption" ngModel required></mt-radio>
+                  <mt-radio [options]="paymentOptions" formControlName="paymentOption"></mt-radio>
                 </div>
 
             </div>
@@ -86,7 +109,9 @@
 
         <div class="row">
           <div class="col-xs-12">
-            <button class="btn btn-success pull-right" [disabled]="!form.valid || cartItems().length === 0"><i class="fa fa-credit-card"></i> Concluir Pedido
+            <button class="btn btn-success pull-right" (click)="checkOrder(orderForm.value)" 
+            [disabled]="!orderForm.valid || cartItems().length === 0">
+              <i class="fa fa-credit-card"></i> Concluir Pedido
             </button>
           </div>
         </div>
